# ChangeLog for eix - Ebuild IndeX for portage

*eix-0.30.12
	Martin Väth <martin at mvath.de>:
	- Fix handling of magic * in EIX_LOCAL_SETS, see
	  https://bugs.gentoo.org/show_bug.cgi?id=553262

*eix-0.30.11
	Martin Väth <martin at mvath.de>:
	- Honour profiles/package.unmask, https://github.com/vaeth/eix/issues/9
	- Verify (and in trivial cases: fix) content of profiles/categories
	  https://github.com/vaeth/eix/issues/8
	- Fix ATTRIBUTE_NONNULL in PortageUserConfig constructor
	- Remove redundant sh quoting

*eix-0.30.10
	Martin Väth <martin at mvath.de>:
	- Let only non-main profiles/package.mask mask repo-locally
	- Bump to gettext-0.19.4

*eix-0.30.9
	Martin Väth <martin at mvath.de>:
	- Fix https://bugs.gentoo.org/show_bug.cgi?id=551108
	  This was a regression of eix-0.30.0 by resetting default repo. Fix by
	  using only local logic: Allow default repo only in parseMask()
	- Add gcc-5 options
	- Add other optimization options which should have been added earlier
	- Fix ATTRIBUTE_NONNULL in OverlayIndent constructors and get_destcat
	- Remove some redundant NULL tests
	- Work around a gcc-5 regression when comparing empty vectors
	- eix-remote: Support combination of -x and -X,
	  see https://forums.gentoo.org/viewtopic.php?p=7744098

*eix-0.30.8
	Martin Väth <martin at mvath.de>:
	- Order mask lists (/etc/portage/package.*) more similar to portage:
	  a) Wildcards are treated alphabetically
	  b) More specifications (slot, repo, version, ...) increase priority
	  However, b) is only distinguished for identical wildcards;
	  this slightly deviates from portage.
	- Fix eix-header: Let -f create fresh data, not add to previous -f
	- eix-header: Special treatment of empty OV value
	- eix-remote: Compatibility fix for recent changes in zugaina, see
	  https://github.com/vaeth/eix/issues/6

*eix-0.30.7
	Martin Väth <martin at mvath.de>:
	- Support @profile: Add it to database (new database version: 34)
	- new option --profile{,+,-}